--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "blast-project/core-bundle": "dev-master",
         "blast-project/base-entities-bundle": "dev-master",
         "blast-project/outer-extension-bundle": "dev-master",
+        "blast-project/utils-bundle": "dev-master",
         "libre-informatique/media-bundle": "dev-master",
         "stfalcon/tinymce-bundle": "2.1",
         "html2text/html2text": "^4.0"
