--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "libre-informatique/email-bundle",
     "type": "symfony-bundle",
     "description": "Email Bundle for Symfony",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.6",
         "symfony/symfony": "3.2.*",
@@ -14,7 +15,9 @@
         "html2text/html2text": "^4.0"
     },
     "require-dev": {
-	"symfony/phpunit-bridge": "3.2.*"
+	"symfony/phpunit-bridge": "3.2.*",
+        "libre-informatique/sonata-sylius-user-bundle": "^0.4",
+        "libre-informatique/email-crm-bundle": "^0.4"
     },
     "license": "LGPL-3.0",
     "keywords": [
