--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "require": {
         "php": ">=5.6",
         "symfony/symfony": ">=3.2",
-        "blast-project/base-entities-bundle": ">=0.4",
-        "blast-project/outer-extension-bundle": ">=0.4",
-        "blast-project/utils-bundle": ">=0.4",
-        "libre-informatique/media-bundle": ">=0.4",
+        "blast-project/base-entities-bundle": "dev-wip-lisem",
+        "blast-project/outer-extension-bundle": "dev-wip-lisem",
+        "blast-project/utils-bundle": "dev-wip-lisem",
+        "libre-informatique/media-bundle": "dev-wip-lisem",
         "stfalcon/tinymce-bundle": ">=2.1",
         "html2text/html2text": ">=4.0",
         "symfony/swiftmailer-bundle": "^2.6"
@@ -63,8 +63,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.4.x-dev",
-            "dev-wip-lisem": "0.4.x-dev"
+            "dev-master": "0.4.x-dev"
         },
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
