--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": ">=5.6",
         "symfony/symfony": ">=3.2",
+        "blast-project/core-bundle": "dev-wip-lisem",
         "blast-project/base-entities-bundle": "dev-wip-lisem",
         "blast-project/outer-extension-bundle": "dev-wip-lisem",
         "blast-project/utils-bundle": "dev-wip-lisem",
