--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Librinfo\\EmailBundle\\": "src/",
-            "Librinfo\\EmailBundle\\Tests\\": "tests/"
+            "Librinfo\\EmailBundle\\": "src/"
         }
     },
     "scripts": {
