--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "require": {
         "php": ">=5.6",
         "symfony/symfony": ">=3.2",
-        "blast-project/core-bundle": "dev-wip-lisem",
-        "blast-project/base-entities-bundle": "dev-wip-lisem",
-        "blast-project/outer-extension-bundle": "dev-wip-lisem",
-        "blast-project/utils-bundle": "dev-wip-lisem",
-        "libre-informatique/media-bundle": "dev-wip-lisem",
+        "blast-project/core-bundle": "self.version",
+        "blast-project/base-entities-bundle": "self.version",
+        "blast-project/outer-extension-bundle": "self.version",
+        "blast-project/utils-bundle": "self.version",
+        "libre-informatique/media-bundle": "self.version",
         "stfalcon/tinymce-bundle": ">=2.1",
         "html2text/html2text": ">=4.0",
         "symfony/swiftmailer-bundle": "^3.0",
