--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "require": {
         "php": ">=5.6",
         "symfony/symfony": ">=3.2",
-        "blast-project/core-bundle": ">=0.4",
-        "blast-project/base-entities-bundle": ">=0.4",
-        "blast-project/outer-extension-bundle": ">=0.4",
-        "blast-project/utils-bundle": ">=0.4",
-        "libre-informatique/media-bundle": ">=0.4",
+        "blast-project/core-bundle": "self.version",
+        "blast-project/base-entities-bundle": "self.version",
+        "blast-project/outer-extension-bundle": "self.version",
+        "blast-project/utils-bundle": "self.version",
+        "libre-informatique/media-bundle": "self.version",
         "stfalcon/tinymce-bundle": ">=2.1",
         "html2text/html2text": ">=4.0",
-        "symfony/swiftmailer-bundle": "^2.6",
+        "symfony/swiftmailer-bundle": "^3.0",
         "friendsofsymfony/jsrouting-bundle": ">=1.6"
     },
     "require-dev": {
