Add Explicit Version

--- a/composer.json
+++ b/composer.json
@@ -42,10 +42,5 @@
             "Librinfo\\EmailBundle\\": "src/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.4.x-dev",
-            "dev-wip-lisem": "0.4.x-dev"
-        }
-    }
+    "version": "dev-wip-lisem"
 }
