--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,4 +1,8 @@
 services:
+    blast_core.label.strategy.librinfo_email:
+        class: Blast\CoreBundle\Translator\LibrinfoLabelTranslatorStrategy
+        arguments: ['Librinfo\EmailBundle']
+    
     librinfo_email.sender:
         class: Librinfo\EmailBundle\Services\Sender
         arguments:
