--- a/src/Resources/config/admin.yml
+++ b/src/Resources/config/admin.yml
@@ -14,7 +14,7 @@ services:
             
     librinfo_email.admin.email_template:
         class: Librinfo\EmailBundle\Admin\EmailTemplateAdmin
-        arguments: [~, Librinfo\EmailBundle\Entity\EmailTemplate, SonataAdminBundle:CRUD]
+        arguments: [~, Librinfo\EmailBundle\Entity\EmailTemplate, BlastCoreBundle:CRUD]
         tags:
             -  name: sonata.admin
                manager_type: orm
@@ -26,21 +26,22 @@ services:
             - [ setTemplate, [edit, LibrinfoEmailBundle:CRUD:email_edit.html.twig]]
 
     librinfo_email.admin.email_receipt:
-        class: Librinfo\EmailBundle\Admin\EmailReceiptAdmin
-        arguments: [~, Librinfo\EmailBundle\Entity\EmailReceipt, SonataAdminBundle:CRUD]
+        class: Librinfo\EmailBundle\Admin\EmailReceipt
+        arguments: [~, Librinfo\EmailBundle\Entity\EmailReceipt, BlastCoreBundle:CRUD]
         tags:
-            -  name: sonata.admin
-               manager_type: orm
-               group: admin
-               label: librinfo.emailbundle.admin.emailreceipt 
-               label_translator_strategy: blast_core.label.strategy.librinfo_email
-                
+            - name: sonata.admin
+              manager_type: orm
+              group: admin
+              label: librinfo.emailbundle.admin.emailreceipt 
+              label_translator_strategy: blast_core.label.strategy.librinfo_email
+
     librinfo_email.admin.email_link:
-        class: Librinfo\EmailBundle\Admin\EmailLinkAdmin
-        arguments: [~, Librinfo\EmailBundle\Entity\EmailLink, SonataAdminBundle:CRUD]
+        class: Librinfo\EmailBundle\Admin\EmailLink
+        arguments: [~, Librinfo\EmailBundle\Entity\EmailLink, BlastCoreBundle:CRUD]
         tags:
             - name: sonata.admin
               manager_type: orm
               group: admin
               label: librinfo.emailbundle.admin.emaillink 
               label_translator_strategy: blast_core.label.strategy.librinfo_email
+
