--- a/tests/Resources/App/config/routing.yml
+++ b/tests/Resources/App/config/routing.yml
@@ -5,16 +5,16 @@ app:
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /
-  
+
 _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /
 
 blast_core:
-    resource: "@BlastCoreBundle/Resources/config/routing.yml" 
-    prefix:   /admin
+    resource: "@BlastCoreBundle/Resources/config/routing.yml"
+    prefix:   /"%librinfo.url_prefix%"
 
 email:
     resource: "@LibrinfoEmailBundle/Resources/config/routing.yml"
-    prefix: /admin
+    prefix:   /"%librinfo.url_prefix%"
