--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "friendsofsymfony/jsrouting-bundle": ">=1.6"
     },
     "require-dev": {
-	    "symfony/phpunit-bridge": ">=3.2",
+        "symfony/phpunit-bridge": ">=3.2",
         "phpunit/phpunit": "^6.4"
     },
     "license": "LGPL-3.0",
@@ -40,7 +40,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Librinfo\\EmailBundle\\": "src/"
+            "Librinfo\\EmailBundle\\": "/"
         }
     }
 }
