Refactor bundle namespaces, views and kernel register

--- a/Resources/config/admin.yml
+++ b/Resources/config/admin.yml
@@ -1,7 +1,7 @@
 services:
     librinfo_email.admin.email:
-        class: Librinfo\EmailBundle\Admin\EmailAdmin
-        arguments: [~, Librinfo\EmailBundle\Entity\Email, LibrinfoEmailBundle:CRUD]
+        class: Sil\Bundle\EmailBundle\Admin\EmailAdmin
+        arguments: [~, Sil\Bundle\EmailBundle\Entity\Email, SilEmailBundle:CRUD]
         tags:
             - name: sonata.admin
               manager_type: orm
@@ -9,12 +9,12 @@ services:
               label: librinfo.emailbundle.admin.email 
               label_translator_strategy: blast_core.label.strategy.librinfo_email
         calls:
-            - [ setTemplate, [edit, LibrinfoEmailBundle:CRUD:email_edit.html.twig]]
-            - [ setTemplate, [show, LibrinfoEmailBundle:CRUD:email_show.html.twig]]
+            - [ setTemplate, [edit, SilEmailBundle:CRUD:email_edit.html.twig]]
+            - [ setTemplate, [show, SilEmailBundle:CRUD:email_show.html.twig]]
             
     librinfo_email.admin.email_template:
-        class: Librinfo\EmailBundle\Admin\EmailTemplateAdmin
-        arguments: [~, Librinfo\EmailBundle\Entity\EmailTemplate, BlastCoreBundle:CRUD]
+        class: Sil\Bundle\EmailBundle\Admin\EmailTemplateAdmin
+        arguments: [~, Sil\Bundle\EmailBundle\Entity\EmailTemplate, BlastCoreBundle:CRUD]
         tags:
             -  name: sonata.admin
                manager_type: orm
@@ -22,12 +22,12 @@ services:
                label: librinfo.emailbundle.admin.emailtemplate
                label_translator_strategy: blast_core.label.strategy.librinfo_email
         calls:
-        #    - [ setTemplate, [edit, LibrinfoEmailBundle:CRUD:email_template_edit.html.twig]]
-            - [ setTemplate, [edit, LibrinfoEmailBundle:CRUD:email_edit.html.twig]]
+        #    - [ setTemplate, [edit, SilEmailBundle:CRUD:email_template_edit.html.twig]]
+            - [ setTemplate, [edit, SilEmailBundle:CRUD:email_edit.html.twig]]
 
     librinfo_email.admin.email_receipt:
-        class: Librinfo\EmailBundle\Admin\EmailReceipt
-        arguments: [~, Librinfo\EmailBundle\Entity\EmailReceipt, BlastCoreBundle:CRUD]
+        class: Sil\Bundle\EmailBundle\Admin\EmailReceipt
+        arguments: [~, Sil\Bundle\EmailBundle\Entity\EmailReceipt, BlastCoreBundle:CRUD]
         tags:
             - name: sonata.admin
               manager_type: orm
@@ -36,8 +36,8 @@ services:
               label_translator_strategy: blast_core.label.strategy.librinfo_email
 
     librinfo_email.admin.email_link:
-        class: Librinfo\EmailBundle\Admin\EmailLink
-        arguments: [~, Librinfo\EmailBundle\Entity\EmailLink, BlastCoreBundle:CRUD]
+        class: Sil\Bundle\EmailBundle\Admin\EmailLink
+        arguments: [~, Sil\Bundle\EmailBundle\Entity\EmailLink, BlastCoreBundle:CRUD]
         tags:
             - name: sonata.admin
               manager_type: orm
