--- a/Resources/config/doctrine/Spoolable.orm.yml
+++ b/Resources/config/doctrine/Spoolable.orm.yml
@@ -1,4 +1,4 @@
-Librinfo\EmailBundle\Entity\Spoolable:
+Sil\Bundle\EmailBundle\Entity\Spoolable:
     type: mappedSuperclass
     fields:
         message:
