--- a/Resources/config/app/config.yml
+++ b/Resources/config/app/config.yml
@@ -1,10 +1,10 @@
 blast_base_entities:
     entity_search_indexes:
-        Librinfo\EmailBundle\Entity\EmailTemplate:
+        Sil\Bundle\EmailBundle\Entity\EmailTemplate:
             fields:
                 - name
                 - content
-        Librinfo\EmailBundle\Entity\Email:
+        Sil\Bundle\EmailBundle\Entity\Email:
             fields:
                 - field_to
                 - field_subject
