--- a/Resources/config/doctrine/EmailTemplate.orm.yml
+++ b/Resources/config/doctrine/EmailTemplate.orm.yml
@@ -1,4 +1,4 @@
-Librinfo\EmailBundle\Entity\EmailTemplate:
+Sil\Bundle\EmailBundle\Entity\EmailTemplate:
     type: entity
     fields:
         name:
