Add entity names as parameters

--- a/Resources/config/admin/sil_email.admin.email_link.yml
+++ b/Resources/config/admin/sil_email.admin.email_link.yml
@@ -2,11 +2,10 @@
 services:
     sil_email.admin.email_link:
         class: Sil\Bundle\EmailBundle\Admin\EmailLink
-        arguments: [~, Sil\Bundle\EmailBundle\Entity\EmailLink, BlastCoreBundle:CRUD]
+        arguments: [~, "%sil_email.entity.email_link.class%", BlastCoreBundle:CRUD]
         tags:
             - name: sonata.admin
               manager_type: orm
               group: admin
-              label: sil.emailbundle.admin.emaillink 
+              label: sil.emailbundle.admin.emaillink
               label_translator_strategy: blast_core.label.strategy.sil_email
-
