--- a/Resources/config/admin/sil_email.admin.email.yml
+++ b/Resources/config/admin/sil_email.admin.email.yml
@@ -2,14 +2,13 @@
 services:
     sil_email.admin.email:
         class: Sil\Bundle\EmailBundle\Admin\EmailAdmin
-        arguments: [~, Sil\Bundle\EmailBundle\Entity\Email, SilEmailBundle:CRUD]
+        arguments: [~, "%sil_email.entity.email.class%", SilEmailBundle:CRUD]
         tags:
             - name: sonata.admin
               manager_type: orm
               group: admin
-              label: sil.emailbundle.admin.email 
+              label: sil.emailbundle.admin.email
               label_translator_strategy: blast_core.label.strategy.sil_email
         calls:
             - [ setTemplate, [edit, SilEmailBundle:CRUD:email_edit.html.twig]]
             - [ setTemplate, [show, SilEmailBundle:CRUD:email_show.html.twig]]
-
