--- a/Resources/config/admin/sil_email.admin.email_receipt.yml
+++ b/Resources/config/admin/sil_email.admin.email_receipt.yml
@@ -8,5 +8,5 @@ services:
                 name: sonata.admin
                 manager_type: orm
                 group: admin
-                label: sil.emailbundle.admin.emailreceipt
+                label: sil.email.menu_label.email_receipt
                 label_translator_strategy: blast.resource.sonata.label_strategy.prefix
