--- a/Resources/config/app/config.yml
+++ b/Resources/config/app/config.yml
@@ -1,12 +1,14 @@
 blast_base_entities:
-    entity_search_indexes:
-        Sil\Bundle\EmailBundle\Entity\EmailTemplate:
-            fields:
-                - name
-                - content
-        Sil\Bundle\EmailBundle\Entity\Email:
+    entity_searchable_indexes:
+        -
+            class: '%sil_email.entity.email.class%'
             fields:
                 - field_to
                 - field_subject
                 - textContent
                 - sent
+        -
+            class: '%sil_email.entity.email_template.class%'
+            fields:
+                - name
+                - content
