Fix version of php, symfony and phpunit

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "type": "symfony-bundle",
     "description": "Email Bundle for Symfony",
     "require": {
-        "php": ">=7.1",
-        "symfony/symfony": ">=3.2",
+        "php": "^7.1",
+        "symfony/symfony": "^3.3",
         "blast-project/core-bundle": "self.version",
         "blast-project/base-entities-bundle": "self.version",
         "blast-project/outer-extension-bundle": "self.version",
@@ -16,7 +16,7 @@
         "friendsofsymfony/jsrouting-bundle": ">=1.6"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": ">=3.2",
+        "symfony/phpunit-bridge": "^3.3",
         "phpunit/phpunit": "^6.4"
     },
     "license": "LGPL-3.0",
