new "resource" management heavily inspired by SyliusResource (#6)
* [Resource] update ResourceBundle and create the Resource Component

* update service aliases in order to match the 'sil.[type].[name]' format

* remove explicit service declarations and move resource config in vendor directory

* [Stock] fix duplicated translations

* [Blast] [BaseEntities] Fix Guidable listener

* [Resource] update some composer.json to use the resource bundle or component

* [Resource] use and declare resources in SIL Bundles

* [Resource] fix config and mapping 

* [Resource] fix errors with nestedtree repositories

--- a/Resources/config/app/config.yml
+++ b/Resources/config/app/config.yml
@@ -1,4 +1,5 @@
 imports:
+    - { resource: '@SilEmailBundle/Resources/config/vendor/blast/resource.yml' }
     - { resource: '@SilEmailBundle/Resources/config/vendor/blast/menu.yml' }
 
 blast_base_entities:
