--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "stfalcon/tinymce-bundle": ">=2.1",
         "html2text/html2text": ">=4.0",
         "symfony/swiftmailer-bundle": "^3.0",
-        "friendsofsymfony/jsrouting-bundle": ">=1.6"
+        "friendsofsymfony/jsrouting-bundle": "^2.1"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "3.3.*",
