--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": "^7.1",
         "symfony/symfony": "3.3.*",
         "blast-project/resource-bundle": "self.version",
+        "blast-project/resource": "self.version",
         "blast-project/core-bundle": "self.version",
         "blast-project/base-entities-bundle": "self.version",
         "blast-project/outer-extension-bundle": "self.version",
