--- a/Tests/Resources/App/config/config_test_sqlite.yml
+++ b/Tests/Resources/App/config/config_test_sqlite.yml
@@ -4,12 +4,8 @@ imports:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver: pdo_pgsql
-        host: 127.0.0.1
-        port: 5432
-        dbname: travis
-        user: travis
-        password: ~
+        driver: pdo_sqlite
+        database_path: "%kernel.root_dir%/var/data/data_test.sqlite"
         charset: UTF8
     orm:
         auto_mapping: true
