--- a/Tests/Resources/App/config/config.yml
+++ b/Tests/Resources/App/config/config.yml
@@ -1,10 +1,7 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
-    - { resource: services.yml }
 
-# Put parameters here that don't need to change on each machine where the app is deployed
-# http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
 
@@ -14,108 +11,17 @@ framework:
     secret: '%secret%'
     router:
         resource: '%kernel.root_dir%/config/routing.yml'
-        strict_requirements: ~
     form: ~
     csrf_protection: ~
-    validation: { enable_annotations: true }
-    #serializer: { enable_annotations: true }
     templating:
         engines: ['twig']
     default_locale: '%locale%'
-    trusted_hosts: ~
-    trusted_proxies: ~
     session:
-        # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-        handler_id:  session.handler.native_file
-        save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
+        # http://symfony.com/doc/current/components/http_foundation/session_testing.html
+        storage_id:  session.storage.mock_file
     fragments: ~
     http_method_override: true
-    assets: ~
+    test: ~
     php_errors:
         log: true
 
-# Twig Configuration
-twig:
-    debug: '%kernel.debug%'
-    strict_variables: '%kernel.debug%'
-    form_themes:
-        - 'SonataCoreBundle:Form:datepicker.html.twig'
-        - 'SonataCoreBundle:Form:colorpicker.html.twig'
-        - 'BlastCoreBundle:Admin/Form:fields.html.twig'
-        - 'BlastUtilsBundle:Form:fields.html.twig'
-        - 'BlastBaseEntitiesBundle:Form:fields.html.twig'
-        - 'SilMediaBundle:Form:fields.html.twig'
-
-# Doctrine Configuration
-doctrine:
-    dbal:
-        driver: pdo_pgsql
-        host: '%database_host%'
-        port: '%database_port%'
-        dbname: '%database_name%'
-        user: '%database_user%'
-        password: '%database_password%'
-        charset: UTF8
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/../var/data/data.sqlite"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #path: '%database_path%'
-
-    orm:
-        auto_generate_proxy_classes: '%kernel.debug%'
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
-        mappings:
-            gedmo_loggable:
-                type: annotation
-                prefix: Gedmo\Loggable\Entity
-                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Loggable/Entity"
-                alias: GedmoLoggable # (optional) it will default to the name set for the mappingmapping
-                is_bundle: false
-
-# Swiftmailer Configuration
-swiftmailer:
-    default_mailer: direct_mailer
-    mailers:
-        direct_mailer:
-            transport: "%mailer_transport%"
-            host:      "%mailer_host%"
-            port:      1025
-            username:  "%mailer_user%"
-            password:  "%mailer_password%"
-        spool_mailer:
-            transport: "%mailer_transport%"
-            host:      "%mailer_host%"
-            port:      1025
-            username:  "%mailer_user%"
-            password:  "%mailer_password%"
-            spool: { type: db }
-
-# Sonata
-sonata_block:
-    default_contexts: [cms]
-    blocks:
-        # Enable the SonataAdminBundle block
-        sonata.admin.block.admin_list:
-            contexts:   [admin]
-        # Your other blocks
-
-blast_base_entities:
-    orm:
-        default:
-            naming: true
-            guidable: true
-            timestampable: true
-            addressable: true
-            treeable: false
-            nested_treeable: true
-            nameable: true
-            labelable: true
-            emailable: true
-            descriptible: true
-            searchable: true
-            loggable: true
-            sortable: true
-            normalize: true
